build: micronaut to 3.5.4-SNAPSHOT

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 projectVersion=3.5.4-SNAPSHOT
 micronautBuildVersion=1.1.5
-micronautVersion=3.5.3
+micronautVersion=3.5.4-SNAPSHOT
 rockerVersion=1.3.0
 groovyVersion=3.0.10
 spockVersion=2.0-groovy-3.0
