--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 projectVersion=3.5.5-SNAPSHOT
 micronautBuildVersion=1.1.5
-micronautVersion=3.5.4
+micronautVersion=3.5.5-SNAPSHOT
 rockerVersion=1.3.0
 groovyVersion=3.0.11
 spockVersion=2.0-groovy-3.0
