--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 projectVersion=3.6.3-SNAPSHOT
 micronautBuildVersion=1.1.5
-micronautVersion=3.6.3-SNAPSHOT
+micronautVersion=3.6.3
 rockerVersion=1.3.0
 groovyVersion=3.0.12
 spockVersion=2.0-groovy-3.0
