--- a/starter-core/src/main/resources/pom.xml
+++ b/starter-core/src/main/resources/pom.xml
@@ -252,5 +252,15 @@
             <artifactId>awaitility-kotlin</artifactId>
             <version>4.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awscdk</groupId>
+            <artifactId>apigatewayv2-alpha</artifactId>
+            <version>2.39.1-alpha.0</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awscdk</groupId>
+            <artifactId>apigatewayv2-integrations-alpha</artifactId>
+            <version>2.39.1-alpha.0</version>
+        </dependency>
     </dependencies>
 </project>
