--- a/starter-core/src/main/resources/pom.xml
+++ b/starter-core/src/main/resources/pom.xml
@@ -123,6 +123,11 @@
             <version>3.5.3</version>
         </dependency>
         <dependency>
+            <groupId>io.micronaut.gradle</groupId>
+            <artifactId>micronaut-crac-plugin</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+        <dependency>
             <groupId>com.microsoft.azure</groupId>
             <artifactId>azure-functions-gradle-plugin</artifactId>
             <version>1.8.2</version>
