--- a/test-features/build.gradle
+++ b/test-features/build.gradle
@@ -12,7 +12,6 @@ dependencies {
     testImplementation 'com.google.auth:google-auth-library-oauth2-http:1.6.0'
     testImplementation "com.oracle.oci.sdk:oci-java-sdk-full:1.34.0"
     testImplementation "ch.qos.logback:logback-classic:1.2.11"
-    testImplementation("commons-io:commons-io:2.11.0")
 }
 
 sourceSets {
@@ -26,4 +25,12 @@ sourceSets {
 rocker {
     javaVersion = '1.8'
     postProcessing = ['io.micronaut.starter.rocker.WhitespaceProcessor']
+}
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        if (details.requested.group == 'io.micronaut.oraclecloud') {
+            details.useVersion '2.1.5'
+            details.because 'https://github.com/micronaut-projects/micronaut-oracle-cloud/releases/tag/v2.2.0 removes commons-io'
+        }
+    }
 }
