--- a/starter-core/src/main/resources/pom.xml
+++ b/starter-core/src/main/resources/pom.xml
@@ -17,14 +17,19 @@
     </repositories>
     <dependencies>
         <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
+            <version>1.9.3</version>
+        </dependency>
+        <dependency>
             <groupId>io.kotest</groupId>
             <artifactId>kotest-runner-junit5-jvm</artifactId>
-            <version>4.6.4</version>
+            <version>4.2.5</version>
         </dependency>
         <dependency>
             <groupId>io.kotest</groupId>
             <artifactId>kotest-assertions-core-jvm</artifactId>
-            <version>4.6.4</version>
+            <version>4.2.5</version>
         </dependency>
         <dependency>
             <groupId>io.opentelemetry.instrumentation</groupId>
