--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 projectVersion=3.7.1-SNAPSHOT
 micronautBuildVersion=1.1.5
-micronautVersion=3.7.0
+micronautVersion=3.7.1-SNAPSHOT
 rockerVersion=1.3.0
 groovyVersion=3.0.12
 spockVersion=2.0-groovy-3.0
