--- a/starter-core/src/main/resources/pom.xml
+++ b/starter-core/src/main/resources/pom.xml
@@ -54,6 +54,11 @@
         </dependency>
         <dependency>
             <groupId>com.agorapulse</groupId>
+            <artifactId>micronaut-slack-http</artifactId>
+            <version>1.0.2-micronaut-3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.agorapulse</groupId>
             <artifactId>micronaut-worker</artifactId>
             <version>1.2.1-micronaut-3.0</version>
         </dependency>
