groupid org.apache.groovy instead of org.codehaus.groovy
In Groovy 4.0, the groupId of the maven coordinates for Groovy have changed from org.codehaus.groovy to org.apache.groovy.

[ci skip]

--- a/starter-cli/build.gradle
+++ b/starter-cli/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 
     testImplementation "org.testcontainers:spock"
     testImplementation 'org.reflections:reflections:0.10.2'
-    testImplementation 'org.codehaus.groovy:groovy-xml'
+    testImplementation 'org.apache.groovy:groovy-xml'
 }
 
 application {
