--- a/buildSrc/src/main/groovy/io.micronaut.internal.starter.base-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.internal.starter.base-module.gradle
@@ -16,7 +16,7 @@ ext {
 configurations.all {
     resolutionStrategy {
         eachDependency { DependencyResolveDetails details ->
-            if (details.requested.group == "org.codehaus.groovy") {
+            if (details.requested.group == "org.apache.groovy") {
                 details.useVersion(groovyVersion)
             }
             if (details.requested.name == "spock-core") {
@@ -33,8 +33,8 @@ spotless {
 }
 
 dependencies {
-    testImplementation("org.codehaus.groovy:groovy:$groovyVersion")
+    testImplementation("org.apache.groovy:groovy:$groovyVersion")
     testImplementation("org.spockframework:spock-core:$spockVersion") {
-        exclude group: "org.codehaus.groovy", module: "groovy-all"
+        exclude group: "org.apache.groovy", module: "groovy-all"
     }
 }
