--- a/buildSrc/src/main/groovy/io.micronaut.internal.starter.base-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.internal.starter.base-module.gradle
@@ -23,6 +23,10 @@ configurations.all {
                 details.useVersion(spockVersion)
             }
         }
+        dependencySubstitution {
+            substitute(module("org.codehaus.groovy:groovy"))
+                    .using(module("org.apache.groovy:groovy:4.0.6"))
+        }
     }
 }
 
