--- a/.github/workflows/gradle-func.yml
+++ b/.github/workflows/gradle-func.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: ['8', '11', '17']
+        java: ['17']
     steps:
       - uses: actions/checkout@v3
 #      - uses: actions/cache@v3
@@ -39,7 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: ['8', '11', '17']
+        java: ['17']
     steps:
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
@@ -66,7 +66,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: ['8', '11', '17']
+        java: ['17']
     steps:
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
@@ -93,7 +93,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: ['8', '11', '17']
+        java: ['17']
     steps:
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
@@ -120,7 +120,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: ['8', '11', '17']
+        java: ['17']
     steps:
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
@@ -147,7 +147,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: ['8', '11', '17']
+        java: ['17']
     steps:
       - uses: actions/checkout@v3
       - uses: actions/cache@v3
