--- a/starter-core/build.gradle
+++ b/starter-core/build.gradle
@@ -4,12 +4,12 @@ plugins {
     id "io.micronaut.starter.rocker"
 }
 
-configurations.all {
-    resolutionStrategy.dependencySubstitution {
-        substitute(module("io.micronaut:micronaut-jackson-databind"))
-                .using(module("io.micronaut.serde:micronaut-serde-jackson:2.0.0-SNAPSHOT"))
-    }
-}
+//configurations.all {
+//    resolutionStrategy.dependencySubstitution {
+//        substitute(module("io.micronaut:micronaut-jackson-databind"))
+//                .using(module("io.micronaut.serde:micronaut-serde-jackson:2.0.0-SNAPSHOT"))
+//    }
+//}
 
 sourceSets {
     main {
@@ -25,7 +25,11 @@ dependencies {
     api "io.micronaut:micronaut-inject"
     api "io.micronaut:micronaut-http"
     api "io.micronaut:micronaut-http-client"
-    api "io.micronaut.serde:micronaut-serde-jackson"
+
+    // I'm getting too many failures using micronaut-serialization. Maybe starter needs to point to a newer version?
+//    api "io.micronaut.serde:micronaut-serde-jackson"
+    api "io.micronaut:micronaut-jackson-databind"
+
     api "io.github.java-diff-utils:java-diff-utils:4.10"
     api "org.eclipse.jgit:org.eclipse.jgit:5.11.1.202105131744-r"
     implementation 'org.yaml:snakeyaml:1.33'
