--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,12 @@ pluginManagement {
     }
 }
 
+buildscript {
+    configurations.classpath {
+        exclude group: 'org.xhtmlrenderer'
+    }
+}
+
 plugins {
     id 'io.micronaut.build.shared.settings' version '5.3.9'
 }
