Workaround JCenter being broken and Gradle switching to mavencentral

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ pluginManagement {
 buildscript {
     configurations.classpath {
         exclude group: 'org.xhtmlrenderer'
+        exclude group: 'org.ysb33r.gradle'
     }
 }
 
