--- a/test-utils/build.gradle
+++ b/test-utils/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     implementation("org.apache.groovy:groovy:$groovyVersion")
     implementation("org.spockframework:spock-core:$spockVersion") {
         exclude group: "org.apache.groovy", module: "groovy-all"
+        exclude group: 'org.codehaus.groovy'
     }
     implementation project(":starter-core")
 }
