--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: '8'
       - name: Set the current release version
         id: release_version
-        run: echo ::set-output name=release_version::${GITHUB_REF:11}
+        run: echo "release_version=${GITHUB_REF:11}" >> $GITHUB_OUTPUT
       - name: Run pre-release
         uses: micronaut-projects/github-actions/pre-release@master
         env:
@@ -99,7 +99,7 @@ jobs:
         run: |
           release_version=${GITHUB_REF:11}
           sed -i "s/^projectVersion.*$/projectVersion\=${release_version}/" gradle.properties
-          echo ::set-output name=release_version::${release_version}
+          echo "release_version=${release_version}" >> $GITHUB_OUTPUT
       - name: Setup GraalVM CE
         uses: graalvm/setup-graalvm@v1
         with:
@@ -149,7 +149,7 @@ jobs:
         run: |
           release_version=${GITHUB_REF:11}
           sed -i -e "s/^projectVersion.*$/projectVersion\=${release_version}/" gradle.properties
-          echo ::set-output name=release_version::${release_version}
+          echo "release_version=${release_version}" >> $GITHUB_OUTPUT
       - name: Setup GraalVM CE
         uses: graalvm/setup-graalvm@v1
         with:
@@ -251,7 +251,7 @@ jobs:
         run: |
           release_version=${GITHUB_REF:11}
           sed -i "s/^projectVersion.*$/projectVersion\=${release_version}/" gradle.properties
-          echo ::set-output name=release_version::${release_version}
+          echo "release_version=${release_version}" >> $GITHUB_OUTPUT
       - name: SDKMAN release
         env:
           GVM_SDKVENDOR_KEY: ${{ secrets.GVM_SDKVENDOR_KEY }}
@@ -274,7 +274,7 @@ jobs:
         run: |
           release_version=${GITHUB_REF:11}
           sed -i "s/^projectVersion.*$/projectVersion\=${release_version}/" gradle.properties
-          echo ::set-output name=release_version::${release_version}
+          echo "release_version=${release_version}" >> $GITHUB_OUTPUT
       - name: Run Tests
         run: ./gradlew starter-api:test starter-web-netty:test starter-gcp-function:shadowJar
         env:
@@ -316,7 +316,7 @@ jobs:
         run: |
           release_version=${GITHUB_REF:11}
           sed -i "s/^projectVersion.*$/projectVersion\=${release_version}/" gradle.properties
-          echo ::set-output name=release_version::${release_version}
+          echo "release_version=${release_version}" >> $GITHUB_OUTPUT
       - name: Authenticate into Google Cloud Platform
         uses: google-github-actions/setup-gcloud@v0.2.1
         with:
@@ -359,7 +359,7 @@ jobs:
         run: |
           s=$(sha256sum mn.zip | awk  '{ print $1 }')
           echo "SHA256 is: $s"
-          echo ::set-output name=sha::${s}
+          echo "sha=${s}" >> $GITHUB_OUTPUT
       - name: Update Cask file
         env:
           SHA: ${{ steps.sha.outputs.sha }}
@@ -417,7 +417,7 @@ jobs:
           (Get-Content ./tools/chocolateyinstall.ps1) -replace '^\$version.*', "`$version = '$Version'" | Set-Content ./tools/chocolateyinstall.ps1
           (Get-Content ./tools/chocolateyinstall.ps1) -replace '  checksum\s+=.*', "  checksum      = '$SHA'" | Set-Content ./tools/chocolateyinstall.ps1
           Get-Content ./tools/chocolateyinstall.ps1
-          echo "::set-output name=nuget_version::$NugetVersion"
+          echo "nuget_version=$NugetVersion" >> $GITHUB_OUTPUT
       - name: Create package
         working-directory: chocolatey
         run: choco pack
