--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,12 @@ pluginManagement {
     }
 }
 
+buildscript {
+    dependencies {
+        classpath 'org.antlr:antlr4-runtime:4.8-1!!'
+    }
+}
+
 plugins {
     id 'io.micronaut.build.shared.settings' version '5.4.5'
 }
