--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,16 +53,16 @@ jobs:
           asset_path: starter-cli/build/distributions/micronaut-cli-${{ steps.release_version.outputs.release_version }}.zip
           asset_name: micronaut-cli-${{ steps.release_version.outputs.release_version }}.zip
           asset_content_type: application/zip
-#      - name: Publish to Github Pages
-#        if: success()
-#        uses: micronaut-projects/github-pages-deploy-action@master
-#        env:
-#          BETA: ${{ contains(steps.release_version.outputs.release_version, 'M') || contains(steps.release_version.outputs.release_version, 'RC') }}
-#          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-#          BASE_BRANCH: master
-#          BRANCH: gh-pages
-#          FOLDER: build/docs
-#          VERSION: ${{ steps.release_version.outputs.release_version }}
+      - name: Publish to Github Pages
+        if: success()
+        uses: micronaut-projects/github-pages-deploy-action@master
+        env:
+          BETA: ${{ contains(steps.release_version.outputs.release_version, 'M') || contains(steps.release_version.outputs.release_version, 'RC') }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          BASE_BRANCH: master
+          BRANCH: gh-pages
+          FOLDER: build/docs
+          VERSION: ${{ steps.release_version.outputs.release_version }}
       - name: Run post-release
         if: success()
         id: post_release
