--- a/buildSrc/src/main/groovy/io.micronaut.internal.starter.base-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.internal.starter.base-module.gradle
@@ -25,7 +25,7 @@ configurations.all {
         }
         dependencySubstitution {
             substitute(module("org.codehaus.groovy:groovy"))
-                    .using(module("org.apache.groovy:groovy:4.0.6"))
+                    .using(module("org.apache.groovy:groovy:$groovyVersion"))
         }
     }
 }
@@ -40,5 +40,6 @@ dependencies {
     testImplementation("org.apache.groovy:groovy:$groovyVersion")
     testImplementation("org.spockframework:spock-core:$spockVersion") {
         exclude group: "org.apache.groovy", module: "groovy-all"
+        exclude group: 'org.codehaus.groovy'
     }
 }
