--- a/settings.gradle
+++ b/settings.gradle
@@ -8,9 +8,15 @@ pluginManagement {
         id 'com.microsoft.azure.azurefunctions' version '1.4.0'
     }
 }
+// Add Cédrics suggestion to lock the version of Antlr (i.e. rocker failure), https://github.com/micronaut-projects/micronaut-starter/pull/1605
+buildscript {
+    dependencies {
+        classpath 'org.antlr:antlr4-runtime:4.8-1!!'
+    }
+}
 
 plugins {
-    id 'io.micronaut.build.shared.settings' version '6.0.1'
+    id 'io.micronaut.build.shared.settings' version '6.2.2'
 }
 
 rootProject.name = 'micronaut-starter'
