Rework how the dependency coordinates found in templates are handled
Instead of using a pom.xml file, this now makes use of a Gradle version
catalog, found in `gradle/templates.versions.toml`. This file should be
handled by renovatebot automatically.

This will typically make the Gradle plugin upgrades much easier to
handle since there will be a single place to change.

Fixes #1635

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,6 @@ pluginManagement {
         mavenCentral()
     }
     plugins {
-        id 'io.micronaut.application' version '3.7.2'
         id 'com.microsoft.azure.azurefunctions' version '1.4.0'
     }
 }
@@ -12,6 +11,7 @@ pluginManagement {
 buildscript {
     dependencies {
         classpath 'org.antlr:antlr4-runtime:4.8-1!!'
+        classpath 'org.tomlj:tomlj:1.0.0!!'
     }
 }
 
@@ -43,3 +43,11 @@ include 'test-utils'
 include 'test-cli'
 
 project(':starter-cli').name = "micronaut-cli"
+
+dependencyResolutionManagement {
+    versionCatalogs {
+        templateLibs {
+            from(files("gradle/templates.versions.toml"))
+        }
+    }
+}
