--- a/starter-aws-lambda/build.gradle
+++ b/starter-aws-lambda/build.gradle
@@ -1,8 +1,7 @@
 plugins {
     id "io.micronaut.internal.starter.convention"
-    id("io.micronaut.application")
+    alias(templateLibs.plugins.micronaut.application)
 }
-
 
 micronaut {
     version micronautVersion
