--- a/starter-web-netty/build.gradle
+++ b/starter-web-netty/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id "io.micronaut.internal.starter.convention"
     id "com.github.johnrengelman.shadow"
-    id 'io.micronaut.application' 
+    alias(templateLibs.plugins.micronaut.application)
 }
 
 ext.publish = false
