define version appengine-gradle-plugin

--- a/gradle/templates.versions.toml
+++ b/gradle/templates.versions.toml
@@ -16,6 +16,7 @@ agorapulse-micronaut-slack = "1.0.4-micronaut-3.0"
 agorapulse-micronaut-worker = "1.2.2-micronaut-3.0"
 apigatewayv2 = "2.42.1-alpha.0"
 apigatewayv2-integrations = "2.44.0-alpha.0"
+appengine-gradle-plugin = "2.4.5"
 asciidoctor-gradle-jvm = "3.3.2"
 asciidoctor-maven-plugin = "2.2.2"
 asciidoctorj = "2.5.5"
@@ -64,6 +65,7 @@ agorapulse-micronaut-slack = { module = "com.agorapulse:micronaut-slack-http", v
 agorapulse-micronaut-worker = { module = "com.agorapulse:micronaut-worker", version.ref = "agorapulse-micronaut-worker" }
 apigatewayv2-alpha = { module = "software.amazon.awscdk:apigatewayv2-alpha", version.ref = "apigatewayv2" }
 apigatewayv2-integrations-alpha = { module = "software.amazon.awscdk:apigatewayv2-integrations-alpha", version.ref = "apigatewayv2-integrations" }
+appengine-gradle-plugin = { module = "com.google.cloud.tools:appengine-gradle-plugin", version.ref = "appengine-gradle-plugin" }
 asciidoctor-gradle-jvm = { module = "org.asciidoctor:asciidoctor-gradle-jvm", version.ref = "asciidoctor-gradle-jvm" }
 asciidoctor-maven-plugin = { module = "org.asciidoctor:asciidoctor-maven-plugin", version.ref = "asciidoctor-maven-plugin" }
 asciidoctorj = { module = "org.asciidoctor:asciidoctorj", version.ref = "asciidoctorj" }
