[skip ci] fix some compile errors with jakarta.validation

--- a/starter-core/build.gradle
+++ b/starter-core/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'org.yaml:snakeyaml:1.33'
     implementation 'com.typesafe:config:1.4.1'
     implementation 'io.micronaut.testresources:micronaut-test-resources-build-tools:1.0.0'
+    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
     implementation 'org.apache.commons:commons-compress:1.21'
     testImplementation("org.apache.groovy:groovy-xml")
 }
