fix: use allowed-origins-regex configuration

--- a/starter-web-netty/src/main/resources/application.yml
+++ b/starter-web-netty/src/main/resources/application.yml
@@ -9,9 +9,9 @@ micronaut:
       enabled: true
       configurations:
         web:
-          allowedOrigins:
+          allowed-origins-regex:
             - ${CORS_ALLOWED_ORIGIN:`^http(|s):\/\/micronaut\.io$`}
-          allowedMethods:
+          allowed-methods:
             - GET
   starter:
     github:
