--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-databind:2.11.0"
     implementation "io.sdkman:gradle-sdkvendor-plugin:2.0.0"
     implementation "org.asciidoctor:asciidoctor-gradle-jvm:2.4.0"
-    implementation "gradle.plugin.com.github.johnrengelman:shadow:8.1.1"
+    implementation "com.github.johnrengelman:shadow:8.1.1"
     implementation "com.microsoft.azure:azure-functions-gradle-plugin:1.12.1"
 }
 
